--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,6 +40,8 @@
     <link rel="stylesheet" href="/public/css/custom.css" />
     <link rel="stylesheet" href="/public/css/syntax.css" />
     <link rel="stylesheet" href="/public/foundation-icons/foundation-icons.css" />
+    <link rel="alternate" type="application/rss+xml" title="{{ site.description_name }} | {{ site.description_blog }}" href="{{ site.url }}/feed/">
+    <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
     <script src="/public/js/vendor/modernizr.js"></script>
 </head>
 <body>
