--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,6 +43,7 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.description_name }} | {{ site.description_blog }}" href="{{ site.url }}/feed/">
     <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
     <script src="/public/js/vendor/modernizr.js"></script>
+    <script src="/public/js/cookies-enabler.min.js"></script>
 </head>
 <body>
     <nav class="top-bar" data-topbar>
@@ -138,7 +139,7 @@
             <div id="disqus_thread"></div>
         </div>
     </div>
-    <script type="text/javascript">
+    <script type="text/plain" class="ce-script">
         var disqus_shortname = '{{site.disqus}}';
         (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
@@ -147,7 +148,7 @@
         })();
     </script>
 
-    <script>
+    <script type="text/plain" class="ce-script">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o)
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -160,6 +161,7 @@
     <script src="/public/js/foundation.min.js"></script>
     <script>
         $(document).foundation();
+        COOKIES_ENABLER.init();
     </script>
 </body>
 </html>
