--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -66,7 +66,7 @@
             padding: .6em 1em;
             display: inline-block;
         }
-        .ce-dismiss {
+        .ce-read {
             color: #0078a0;
         }
     </style>
@@ -197,7 +197,7 @@
             acceptClass: 'ce-accept',
             dismissClass: 'ce-dismiss',
             bannerClass: 'ce-banner',
-            bannerHTML: 'Questo sito utilizza cookie di terze parti. Proseguendo nella navigazione di questo sito acconsenti al loro utilizzo. <a href="#" class="ce-accept">Ok</a> <a href="/cookies-policy-semplice.html" class="ce-dismiss">Cookies Policy</a>',
+            bannerHTML: 'Questo sito utilizza cookie di terze parti. Proseguendo nella navigazione di questo sito acconsenti al loro utilizzo. <a href="#" class="ce-accept">Ok</a> <a href="/cookies-policy-semplice.html" class="ce-read">Cookies Policy</a>',
             eventScroll: false,
             clickOutside: false,
             cookie: {
