--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -164,6 +164,7 @@
             </a>
         </div>
     </div>
+    {% if page.disqus != false %}
     <div class="row commentPost">
         <div class="large-12 small-12 columns">
             <div id="disqus_thread"></div>
@@ -177,6 +178,7 @@
             (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
     </script>
+{% endif %}
 
     <script type="text/plain" class="ce-script">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
