--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="{{site.description_name}} |  {{site.description_blog}}"/>
     <meta name="keywords" content="programming, security, raspberry, computer vision, dlion, blog"/>
+
+    {% feed_meta %}
+
     <link rel="author" href="https://plus.google.com/{{site.gplus}}"/>
     <link rel="publisher" href="https://plus.google.com/{{site.gplus}}"/>
     <!-- SEO -->
